@@ -51,7 +51,7 @@ BLOG_CONTACT=""
 # example email as link
 # BLOG_CONTACT='<a href="mailto:foo@null.org">email foo</a>'
 
-# Build permalinks (a page for each entry) - 0/1 = off/on.
+# Build individual archive for each entry - 0/1 = off/on.
 PERMALINKS="0"
 
 # Enable plugins - 0/1 = off/on.
@@ -68,6 +68,6 @@ TIDY_ARGS=""
 # Fortune plugin should use fortunes from this file.
 FORTUNE_FILE=""
 
-# Enable category feeds
+# Enable category feeds - 0/1 = off/on.
 CATEGORY_FEEDS="0"
 
