@@ -91,6 +91,7 @@ Programs:
 	expr,
 	grep,
 	mkdir,
+	mv,
 	read,
 	rm,
 	sed,
@@ -133,11 +134,11 @@ Programs:
 </blockquote>
 <b>Setting the Number of Entries to Display</b>
 <blockquote>
-	<em>MAX_DISPLAY</em> sets the maximum number of entries to display on the main page. This must be set to a number higher than zero.
+	<em>MAX_ENTRIES</em> sets the maximum number of entries to display on the main page. This must be set to a number higher than zero.
 </blockquote>
-<b>Enabling Full Permalinks</b>
+<b>Enabling Permalinks</b>
 <blockquote>
-	<em>FULL_PERMALINKS</em> determines whether permalinks are linked back to the monthly archives or linked to an entry's individual archive.  The default is to leave <em>FULL_PERMALINKS</em> off and link back to the monthly archives.  Enabling <em>FULL_PERMALINKS</em> will increase the time needed to generate your blog.
+	Setting <em>PERMALINKS</em> to equal "1", enables archiving of individual entries and reconfigures the links of the entries to point to their individual archives.
 </blockquote>
 <b>Setting Actions for Previewing and Publishing</b>
 <blockquote>
